<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSwitchesActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/currentNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentNameQuestionText"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/currentNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/currentNameAutofill"
            android:inputType="textPersonName"
            android:text="@string/currentNameAutofill"
            android:textColor="@color/colorBlack" tools:targetApi="o"/>

        <TextView
            android:id="@+id/newNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newNameQuestionText"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/newNameAutofill"
            android:inputType="textPersonName"
            android:text="@string/newNameAutofill" tools:targetApi="o"/>

        <TextView
            android:id="@+id/newNoteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newNoteQuestionText"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newNoteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/newNoteAutofill"
            android:inputType="textPersonName"
            android:text="@string/newNoteAutofill" tools:targetApi="o"/>

        <Button
            android:id="@+id/saveChangesButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveChangesButtonText" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>